# YandexMusicDiscordRPC

./: .env  .gitignore  Cargo.toml  README.md  YandexMusicDiscordRPC.sln  build.rs
.github/workflows/: create-release.yml  dotnet-desktop.yml
YandexMusicDiscordRPC/: Program.cs  TrayIcon.cs  WindowsMediaController.cs  YandexMusicDiscordRPC.csproj
YandexMusicDiscordRPC/Properties/: Resources.Designer.cs  Resources.resx
YandexMusicDiscordRPC/Utils/: Cmd.cs  IconExtractor.cs
src/: image_cache.rs  main.rs  rpc.rs  track_cache.rs  tray.rs  ymapi.rs
