[package]
name = "yandex-music-discord-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
discord-rich-presence = "0.2.4"
dotenv_codegen = "0.15.0"
env_logger = "0.11.3"
image = "0.25.1"
log = "0.4.22"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
tray-icon = "0.14.3"
win-gsmtc = "0.1.0"
winit = "0.30.3"
